Add okCycle and update plugin styles

--- a/basicLiveSearch/example.html
+++ b/basicLiveSearch/example.html
@@ -1,47 +1,64 @@
-<!doctype html>  
-<html lang="en"> 
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
 <head>
-  <title>jQuery.basicWindow</title>
   <meta charset="utf-8">
-  <meta name="description" content="" /> 
-  <meta name="keywords" content="" /> 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="jquery.basicLiveSearch.js"></script>
-  <script type="text/javascript" src="quicksilver.js"></script>
-  <link rel="stylesheet" href="screen.css" type="text/css" />
-  <link rel="stylesheet" href="okFilter.css" type="text/css" />
-  <script type='text/javascript'>
-    $(document).ready(function(){
-      var input      = $("#countries"),
-          liveSearch = $.liveSearch.create(COUNTRIES);
-      input
-        .keyup(function(){
-          liveSearch.filter(this.value, function(str,term){
-            return str.score(term);                
-          }); 
-        })
-        .after(liveSearch.contents());
-    });
-  </script>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>basicLiveSearch</title>
+  <meta name="description" content="basicLiveSearch">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
 </head>
 <body>
-  <div id='doc'>
-    <h1>basicLiveSearch</h1>
-    <p class='large'>Simple live search UI.</p> 
-    <h2>Demonstration</h2>
-    <form action="" method="post" accept-charset="utf-8">
-      <fieldset>
-        <h3>okFilter from an Array (with existing value)</h3>
-        <label>Pick a Country</label>
-        <p class="field">
-          <input type="text" id="countries" name="countries" autocomplete='off' />
-        </p>
-      </fieldset>
-    </div>
 
-    <script type='text/javascript'>
+  <div id="doc">
+    <header>
+      <h1>jQuery.basicWindow</h1>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>Simple live search UI.</p> 
+        <h2>Demonstration</h2>
+        <pre>
+          <code>
+var liveSearch = $.liveSearch.create(COUNTRIES);
+$("#countries") 
+  .keyup(function(){ liveSearch.filter(this.value, function(str,term){ return str.score(term); }); })
+  .after(liveSearch.contents());
+          </code>
+        </pre>
+        <form action="" method="post" accept-charset="utf-8">
+          <label>Type to Select a Country</label>
+          <p class="field">
+            <input type="text" id="countries" name="countries" autocomplete='off' />
+          </p>
+        </form>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.basicLiveSearch.js"></script>
+  <script type="text/javascript" src="quicksilver.js"></script>
+  <script type='text/javascript'>
 var COUNTRIES = [ "Afghanistan", "Akrotiri", "Albania", "Algeria", "American Samoa", "Andorra", "Angola", "Anguilla", "Antarctica", "Antigua and Barbuda", "Argentina", "Armenia", "Aruba", "Ashmore and Cartier Islands", "Australia", "Austria", "Azerbaijan", "Bahamas, The", "Bahrain", "Bangladesh", "Barbados", "Bassas da India", "Belarus", "Belgium", "Belize", "Benin", "Bermuda", "Bhutan", "Bolivia", "Bosnia and Herzegovina", "Botswana", "Bouvet Island", "Brazil", "British Indian Ocean Territory", "British Virgin Islands", "Brunei", "Bulgaria", "Burkina Faso", "Burma", "Burundi", "Cambodia", "Cameroon", "Canada", "Cape Verde", "Cayman Islands", "Central African Republic", "Chad", "Chile", "China", "Christmas Island", "Clipperton Island", "Cocos (Keeling) Islands", "Colombia", "Comoros", "Congo, Democratic Republic of the", "Congo, Republic of the", "Cook Islands", "Coral Sea Islands", "Costa Rica", "Cote d'Ivoire", "Croatia", "Cuba", "Cyprus", "Czech Republic", "Denmark", "Dhekelia", "Djibouti", "Dominica", "Dominican Republic", "Ecuador", "Egypt", "El Salvador", "Equatorial Guinea", "Eritrea", "Estonia", "Ethiopia", "Europa Island", "Falkland Islands (Islas Malvinas)", "Faroe Islands", "Fiji", "Finland", "France", "French Guiana", "French Polynesia", "French Southern and Antarctic Lands", "Gabon", "Gambia, The", "Gaza Strip", "Georgia", "Germany", "Ghana", "Gibraltar", "Glorioso Islands", "Greece", "Greenland", "Grenada", "Guadeloupe", "Guam", "Guatemala", "Guernsey", "Guinea", "Guinea-Bissau", "Guyana", "Haiti", "Heard Island and McDonald Islands", "Holy See (Vatican City)", "Honduras", "Hong Kong", "Hungary", "Iceland", "India", "Indonesia", "Iran", "Iraq", "Ireland", "Isle of Man", "Israel", "Italy", "Jamaica", "Jan Mayen", "Japan", "Jersey", "Jordan", "Juan de Nova Island", "Kazakhstan", "Kenya", "Kiribati", "Korea, North", "Korea, South", "Kuwait", "Kyrgyzstan", "Laos", "Latvia", "Lebanon", "Lesotho", "Liberia", "Libya", "Liechtenstein", "Lithuania", "Luxembourg", "Macau", "Macedonia", "Madagascar", "Malawi", "Malaysia", "Maldives", "Mali", "Malta", "Marshall Islands", "Martinique", "Mauritania", "Mauritius", "Mayotte", "Mexico", "Micronesia, Federated States of", "Moldova", "Monaco", "Mongolia", "Montserrat", "Morocco", "Mozambique", "Namibia", "Nauru", "Navassa Island", "Nepal", "Netherlands", "Netherlands Antilles", "New Caledonia", "New Zealand", "Nicaragua", "Niger", "Nigeria", "Niue", "Norfolk Island", "Northern Mariana Islands", "Norway", "Oman", "Pakistan", "Palau", "Panama", "Papua New Guinea", "Paracel Islands", "Paraguay", "Peru", "Philippines", "Pitcairn Islands", "Poland", "Portugal", "Puerto Rico", "Qatar", "Reunion", "Romania", "Russia", "Rwanda", "Saint Helena", "Saint Kitts and Nevis", "Saint Lucia", "Saint Pierre and Miquelon", "Saint Vincent and the Grenadines", "Samoa", "San Marino", "Sao Tome and Principe", "Saudi Arabia", "Senegal", "Serbia and Montenegro", "Seychelles", "Sierra Leone", "Singapore", "Slovakia", "Slovenia", "Solomon Islands", "Somalia", "South Africa", "South Georgia and the South Sandwich Islands", "Spain", "Spratly Islands", "Sri Lanka", "Sudan", "Suriname", "Svalbard", "Swaziland", "Sweden", "Switzerland", "Syria", "Taiwan", "Tajikistan", "Tanzania", "Thailand", "Timor-Leste", "Togo", "Tokelau", "Tonga", "Trinidad and Tobago", "Tromelin Island", "Tunisia", "Turkey", "Turkmenistan", "Turks and Caicos Islands", "Tuvalu", "Uganda", "Ukraine", "United Arab Emirates", "United Kingdom", "United States", "Uruguay", "Uzbekistan", "Vanuatu", "Venezuela", "Vietnam", "Virgin Islands", "Wake Island", "Wallis and Futuna", "West Bank", "Western Sahara", "Yemen", "Zambia", "Zimbabwe" ];
-</script>
-  </body>
-</html>
 
+    var liveSearch = $.liveSearch.create(COUNTRIES);
+    $("#countries")
+      .keyup(function(){ liveSearch.filter(this.value, function(str,term){ return str.score(term); }); })
+      .after(liveSearch.contents());
+
+  </script>
+</body>
+</html>
