--- a/okCollapse/example.html
+++ b/okCollapse/example.html
@@ -1,83 +1,113 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
 <head>
-<title>jQuery.okCollapse</title>
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="jquery.okCollapse.js"></script>
-<link rel="stylesheet" href="screen.css" type="text/css" />
-<script type='text/javascript'>
-  
-  $(document).ready(function(){
-    $("#collapsible").okCollapse({
-      callback: function(target){
-          alert("You clicked: "+target.html());
-      }
-    });
-  });
-
-</script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okCollapse</title>
+  <meta name="description" content="okCollapse">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="okCollapse.css" rel="stylesheet" type="text/css" media="screen">
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
 </head>
 <body>
-  <div id='doc'>
-    <h1>okCollapse</h1>
-    <p class='large'>Small plugin for hiding/showing list nodes</p>
-    <h2>Example</h2>
-    <ul id='collapsible'>
-      <li>
-        <a href="#">North America</a>
-        <ul>
+
+  <div id="doc">
+    <header>
+      <h1>okCollapse</h1>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>Small plugin for hiding/showing list nodes</p>
+        <h2>Example</h2>
+        <pre>
+          <code>
+$("#collapsible").okCollapse({
+  callback: function(target){ // Called when we reach a terminal node
+    $("#result code").html("You clicked: "+target.html());
+  }
+});</code>
+      </pre>
+        <pre id='result'><code>You clicked:</code></pre>
+        <ul id='collapsible'>
           <li>
-            <a href="#">United States</a>
+            <a href="#">North America</a>
             <ul>
-              <li><a href="#">Los Angeles</a></li>
-              <li><a href="#">New York</a></li>
-              <li><a href="#">Chicago</a></li>
+              <li>
+                <a href="#">United States</a>
+                <ul>
+                  <li><a href="#">Los Angeles</a></li>
+                  <li><a href="#">New York</a></li>
+                  <li><a href="#">Chicago</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Canada</a></li>
             </ul>
           </li>
-          <li><a href="#">Canada</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">Europe</a>
-        <ul>
           <li>
-            <a href="#">England</a>
+            <a href="#">Europe</a>
             <ul>
-              <li><a href="#" >London</a></li>
-              <li><a href="#" >Birmingham</a></li>
-              <li><a href="#" >Liverpool</a></li>
+              <li>
+                <a href="#">England</a>
+                <ul>
+                  <li><a href="#" >London</a></li>
+                  <li><a href="#" >Birmingham</a></li>
+                  <li><a href="#" >Liverpool</a></li>
+                </ul>
+              </li>
+              <li><a href="#">France</a></li>
+              <li><a href="#">Spain</a></li>
             </ul>
           </li>
-          <li><a href="#">France</a></li>
-          <li><a href="#">Spain</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">Asia</a>
-        <ul>
           <li>
-            <a href="#">Japan</a>
+            <a href="#">Asia</a>
             <ul>
-              <li><a href="#" >Tokyo</a></li>
-              <li><a href="#" >Kyoto</a></li>
-              <li><a href="#" >Nagoya</a></li>
+              <li>
+                <a href="#">Japan</a>
+                <ul>
+                  <li><a href="#" >Tokyo</a></li>
+                  <li><a href="#" >Kyoto</a></li>
+                  <li><a href="#" >Nagoya</a></li>
+                </ul>
+              </li>
+              <li><a href="#">China</a></li>
+              <li><a href="#">Thailand</a></li>
             </ul>
           </li>
-          <li><a href="#">China</a></li>
-          <li><a href="#">Thailand</a></li>
+          <li>
+            <a href="#">Australia</a>
+            <ul>
+              <li><a href="#">Sydney</a></li>
+              <li><a href="#">Adelaide</a></li>
+              <li><a href='#'>Melbourne</a></li>
+            </ul>
+          </li>
         </ul>
-      </li>
-      <li>
-        <a href="#">Australia</a>
-        <ul>
-          <li><a href="#">Sydney</a></li>
-          <li><a href="#">Adelaide</a></li>
-          <li><a href='#'>Melbourne</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.okCollapse.js"></script>
+  <script type='text/javascript'>
+    
+      $("#collapsible").okCollapse({
+        callback: function(target){
+          $("#result code").html("You clicked: "+target.html());
+        }
+      });
+
+  </script>
 </body>
 </html>
