--- a/okNotify/example.html
+++ b/okNotify/example.html
@@ -1,26 +1,61 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
 <head>
-<title>jQuery.okNotify</title>
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="jquery.okNotify.js"></script>
-<link rel="stylesheet" href="screen.css" type="text/css" />
-<link rel="stylesheet" href="jquery.okNotify.css" type="text/css" />
-<script type='text/javascript'>
-  
-  $(document).ready(function(){
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okNotify</title>
+  <meta name="description" content="okNotify">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link rel="stylesheet" href="jquery.okNotify.css" type="text/css" />
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
+</head>
+<body>
+
+  <div id="doc">
+    <header>
+      <h1>okNotify</h1>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>Simple Growl-like notifications, with independent notification queues</p>
+        <h2>Demonstration</h2>
+        <ul>
+          <li><a href='#' class='basic'>Add regular notification</a></li> 
+          <li><a href='#' class='errorNotice'>Add error notification</a></li> 
+          <li><a href='#' class='lowerLeft'>Add regular notification in the lower left</a></li> 
+          <li><a href='#' class='centerNotice'>Add regular notification in the center</a></li> 
+          <li><a href='#' class='successNotice'>Add success notification</a></li> 
+          <li><a href='#' class='sticky'>Add sticky notification</a></li> 
+          <li><a href='#' class='remove'>Remove all notifications</a></li>
+        </ul>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.okNotify.js"></script>
+  <script type='text/javascript'>
+    
     function addNotice(e,opts) {
-      if (e) {
-        e.preventDefault();
-      }
-      opts = opts ? opts : {};
+      if (e) { e.preventDefault(); }
       $.noticeAdd($.extend({
-        text: opts.text || "Notification",
-        title: opts.title || "Notice"
+        text: "Notification",
+        title: "Notice"
       },opts));
     }
+
     $('a.basic').click(function(e){e.preventDefault(); $.noticeAdd("Hello World")});
     $('a.errorNotice').click(function(e){ addNotice(e,{text:  "You caused an error!", title: "Uh oh!", type: 'error' }); });
     $('a.lowerLeft').click(function(e){ addNotice(e,{position:'bottom-left'}); });
@@ -28,30 +63,7 @@
     $('a.successNotice').click(function(e){ addNotice(e,{text: "A winner is you!", title: "Success", type:'success'}); });
     $('a.sticky').click(function(e){ addNotice(e,{text:  "I'm not going away", title: "stick", stay: true }); });
     $('a.remove').click(function(e){ e.preventDefault(); $.noticeRemove()});
-  });
 
-</script>
-<style type='text/css'>
-  a.remove {
-      color: #f00;
-  }
-</style>
-</head>
-
-<body>
-  <div id='doc'>
-    <h1>okNotify</h1>
-    <p class='large'>Simple Growl-like notifications, with independent notification queues</p>
-    <h2>Example</h2>
-    <ul>
-      <li><a href='#' class='basic'>Add regular notification</a></li> 
-      <li><a href='#' class='errorNotice'>Add error notification</a></li> 
-      <li><a href='#' class='lowerLeft'>Add regular notification in the lower left</a></li> 
-      <li><a href='#' class='centerNotice'>Add regular notification in the center</a></li> 
-      <li><a href='#' class='successNotice'>Add success notification</a></li> 
-      <li><a href='#' class='sticky'>Add sticky notification</a></li> 
-      <li><a href='#' class='remove'>Remove all notifications</a></li>
-    </ul>
-  </div>
+  </script>
 </body>
 </html>
