--- a/okReveal/example.html
+++ b/okReveal/example.html
@@ -1,18 +1,82 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
 <head>
-<title>jQuery.okReveal</title>
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
-<!-- <script type="text/javascript" src="jquery.effects.slide.min.js"></script> -->
-<script type="text/javascript" src="jquery.okReveal.js"></script>
-<link rel="stylesheet" href="screen.css" type="text/css" />
-<link rel="stylesheet" href="jquery.okReveal.css" type="text/css" />
-<script type='text/javascript'>
-  
-  $(document).ready(function(){
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okReveal</title>
+  <meta name="description" content="okReveal">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link rel="stylesheet" href="jquery.okReveal.css" type="text/css" />
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
+</head>
+<body>
+
+  <div id="doc">
+    <header>
+      <h1>okReveal</h1>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>
+          Reveal hidden content through one or more animations.
+        </p> 
+        <h2>Demonstration</h2>
+        <ul id='items'>
+          <li id='leftright'>
+            <a href='#'>
+              <span class='title'>Title One</span>
+              <span class='content'>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </span>
+              <span class='hidden-content'>Hello World!</span>
+            </a>
+          </li>
+          <li id='updown'>
+            <a href='#'>
+              <span class='title'>Title Two</span>
+              <span class='content'>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </span>
+              <span class='hidden-content'>Hello World!</span>
+            </a>
+          </li>
+          <li id='fade'>
+            <a href='#'>
+              <span class='title'>Title Three</span>
+              <span class='content'>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </span>
+              <span class='hidden-content'>Hello World!</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/jquery-ui.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="jquery.okReveal.js"></script>
+  <script type='text/javascript'>
+    
       $('#leftright').okReveal({
         elements: {'.content':'slideRight', '.title':'slideLeft'}
       });
@@ -28,57 +92,7 @@
         '.title':[{right:'-=200px', height:0},{right: '+=200px', height:20}] 
         }
       });
-  });
 
-</script>
-</head>
-
-<body>
-  <div id='doc'>
-    <h1>okReveal</h1>
-    <p class='large'>Reveal hidden content through one or more animations.</p> 
-    <p>Note: The second example won't work on Safari because Safari doesn't play nicely with jquery with the 'position:bottom' attribute</p>
-    <h2>Demonstration</h2>
-    <div class='ct'>
-      <ul id='items'>
-        <li id='leftright'>
-          <a href='#'>
-            <span class='title'>Title One</span>
-            <span class='content'>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna
-              aliqua.
-            </span>
-            <span class='hidden-content'>Hello World!</span>
-          </a>
-        </li>
-        <li id='updown'>
-          <a href='#'>
-            <span class='title'>Title Two</span>
-            <span class='content'>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna
-              aliqua.
-            </span>
-            <span class='hidden-content'>Hello World!</span>
-          </a>
-        </li>
-        <li id='fade'>
-          <a href='#'>
-            <span class='title'>Title Three</span>
-            <span class='content'>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna
-              aliqua.
-            </span>
-            <span class='hidden-content'>Hello World!</span>
-          </a>
-        </li>
-      </ul>
-      <div class='clear'></div>
-    </div>
-
-
-  </div>
+  </script>
 </body>
 </html>
