--- a/okShortcut/example.html
+++ b/okShortcut/example.html
@@ -1,37 +1,59 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
 <head>
-<title>jQuery.okSlide</title>
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="jquery.okShortcut.js"></script>
-<link rel="stylesheet" href="screen.css" type="text/css" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okShortcut</title>
+  <meta name="description" content="okShortcut">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
 </head>
-
 <body>
-  <div id='doc'>
-    <h1>okShortcut</h1>
-    <p class='large'>Easy keybinding</p> 
-    <h2>Demonstration</h2>
-    <div class='ct'>
-      <h4 id='result-0'>Press 'enter' without any input focused to update this text</h4>
-    </div>
-    <p>
-      Events can also be bound to specific elements. Remember to pass the
-      <code>'propagate:false'</code> option otherwise the event will bubble to
-      any shortcut bound to containing elements.
-    </p>
-    <div id='group-1' class='ct'>
-      <h4 id='result-1'>Type in the text the input and press 'enter' to replace this text</h4>
-      <input id='input-1' type='text'/>
-    </div>
 
-    <div id='group-2' class='ct'>
-      <h4 id='result-2'>Type in the text the input and press 'enter' to replace this text</h4>
-      <input id='input-2' type='text'/>
-    </div>
-  </div>
+  <div id="doc">
+    <header>
+      <h1>okShortcut</h1>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>Easy keybinding</p> 
+        <h2>Demonstration</h2>
+
+        <h4 id='result-0'>Press 'enter' without any input focused to update this text</h4>
+
+        <p class='box'>
+          Events can also be bound to specific elements. Remember to pass the
+          <code>'propagate:false'</code> option otherwise the event will bubble to
+          any shortcut bound to containing elements.
+        </p>
+
+        <div id='group-1'>
+          <h4 id='result-1'>Type in the text the input and press 'enter' to replace this text</h4>
+          <fieldset><input id='input-1' type='text'/></fieldset>
+        </div>
+
+        <div id='group-2'>
+          <h4 id='result-2'>Type in the text the input and press 'enter' to replace this text</h4>
+          <fieldset><input id='input-2' type='text'/></fieldset>
+        </div>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.okShortcut.js"></script>
   <script type='text/javascript'>
     var i=0;
     $.shortcut.add("enter", function(){ $("#result-1").html("Typed '" + $("#input-1").val() + "' in input 1"); }, { target: $("#group-1"), propagate: false});
