--- a/okTips/example.html
+++ b/okTips/example.html
@@ -1,74 +1,75 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
 <head>
-<title>jQuery.okTips</title>
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="jquery.okTips.js"></script>
-<link rel="stylesheet" href="screen.css" type="text/css" />
-<link rel="stylesheet" href="jquery.okTips.css" type="text/css" />
-<script type='text/javascript'>
-  
-  $(document).ready(function(){
-
-    $("a.basic").okTips();
-    $("a.modal").okTips({ modal:true });
-    $("a.iframe").okTips({ 
-      modal: true,
-      triggerEvent: 'click',
-      body: function(trigger){
-        var iframe = $("<iframe id='iframe' style='border: 1px solid #000; width:400px; height: 400px;'></iframe");
-        iframe
-          .appendTo(this)
-          .attr('src', "http://www.google.com")
-          .load();
-      },
-      afterDestroy: function() {
-        $("iframe").remove();
-      }
-    });
-  });
-
-</script>
-<style type='text/stylesheet'>
-  .ui-widget-overlay { 
-    background:#121111;
-    opacity:0.5;
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
-    z-index:1000;
-  }
-</style>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okTips</title>
+  <meta name="description" content="okTips">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link rel="stylesheet" href="jquery.okTips.css" type="text/css" />
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
 </head>
-
 <body>
-  <div id='doc'>
-    <h1>okTips</h1>
-    <p class='large'>Flexible tooltips and more</p> 
 
-    <h2>Demonstration</h2>
-    <p><strong>Click the clicks to trigger a popup:</strong></p>
-    <p>
-      <a class='basic' title= 'You did a thing!' href='#'>Here's your classic tooltip</a>
-    </p>
-    <p>
-      <a class='modal' title='Click on the overlay to close' href='#'>This is a modal tooltip</a>
-    </p>
-    <p>
-      <a class='iframe' href='#'>Click me to load some content into an iframe!</a>
-    </p>
-    <h2>Help</h2>
+  <div id="doc">
+    <header>
+      <h1>okTips</h1>
+    </header>
 
-    <p>
-      If the overlay isn't filling th entire page, try setting the body height to 100%.
-    </p>
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <h1>okTips</h1>
+        <p class='large'>Flexible tooltips and more</p> 
 
-    <div class='spacer'></div>
-  </div>
+        <h2>Demonstration</h2>
+        <p><strong>Click the clicks to trigger a popup:</strong></p>
+        <p>
+          <a class='basic' title= 'You did a thing!' href='#'>Here's your classic tooltip</a>
+        </p>
+        <p>
+          <a class='modal' title='Click on the overlay to close' href='#'>This is a modal tooltip</a>
+        </p>
+        <p>
+          <a class='iframe' href='#'>Click me to load some content into an iframe!</a>
+        </p>
+
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="jquery.okTips.js"></script>
+  <script type='text/javascript'>
+    
+      $("a.basic").okTips();
+      $("a.modal").okTips({ modal:true });
+      $("a.iframe").okTips({ 
+        modal: true,
+        triggerEvent: 'click',
+        body: function(trigger){
+          var iframe = $("<iframe id='iframe' style='border: 1px solid #000; width:400px; height: 400px;'></iframe");
+          iframe
+            .appendTo(this)
+            .attr('src', "http://www.google.com")
+            .load();
+        },
+        afterDestroy: function() {
+          $("iframe").remove();
+        }
+      });
+
+  </script>
+
 </body>
 </html>
-
