--- a/okTreemap/example.html
+++ b/okTreemap/example.html
@@ -1,73 +1,91 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okTreemap</title>
+  <meta name="description" content="okTreemap">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link type="text/css" rel="stylesheet" media="screen" href="jquery.okTreemap.css"/>
+  <link type="text/css" rel="stylesheet" media="screen" href="ui-darkness/ui-darkness.css"/>
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
+</head>
+<body>
 
-  <head>
-    <title>jquery.okTreemap.js</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="jquery.okTreemap.js"></script>
-    <!-- <link type="text/css" rel="stylesheet" media="screen" href="style.css"/> -->
-    <link type="text/css" rel="stylesheet" media="screen" href="jquery.okTreemap.css"/>
-    <link type="text/css" rel="stylesheet" media="screen" href="ui-darkness/ui-darkness.css"/>
-    <script type='text/javascript'>
-      $(document).ready(function(){
-        function setTime(selections) {
-          var meridiem = selections[0] || '',
-              hour     = selections[1] || '',
-              minute   = (selections.length == 4 ?  selections[2].replace(/0$/, selections[3]) : (selections[2] || ''));
-          if (minute != '') {
-            minute = ":" + minute;
-          }
-          return hour + minute + meridiem;
-        }
-        // This is one of the simplest use cases, just passing in the step
-        // directly to return the values for that given step. More complex processing
-        // could be performed based on the value.
-        $("a#sTime-handle").treeMap(function(step,value){
-            return [
-              ['am','pm'],
-              ['1','2','3','4','5','6','7','8','9','10','11','12'],
-              ['00','10','20','30','40','50'],
-              ['0','1','2','3','4','5','6','7','8','9']
-            ][step];
-          }, {
-            title: "Select time",
-            gridFunction: function(count) {
-              return {
-                '2'  : [2,1],
-                '6'  : [2,3],
-                '9'  : [3,3],
-                '10' : [5,2],
-                '12' : [3,4]
-              }[count];
-            },
-            onSelect: function(selections, value) {
-              this.find('.ui-treemap-title').html(setTime(selections));
-            },
-            onComplete: function(selections) {
-              $("#sTime").val(setTime(selections));
-            }
-          });
-      })
-    </script>
-  </head>
-  <body>
-    <div id='doc'>
+  <div id="doc">
+    <header>
       <h1>okTreemap</h1>
-      <p class='large'>a framework for creating a treemap-like UI components</p>
-      <h2>Demonstration</h2>
-      <p>Here's a simple time-picker</p>
-      <form action="">
-        <div class='form-item'>
-          <label>Time:</label> 
-          <input id='sTime' name="sTime" value="" />
-          <a id='sTime-handle' href="#">Click Me</a>
-        </div>
-      </form>
-    </div>
-  </body>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>Framework for creating a treemap-like UI components</p>
+        <h2>Demonstration</h2>
+        <p>Here's a simple time-picker</p>
+        <form action="">
+          <div class='form-item'>
+            <label>Time:</label> 
+            <input id='sTime' name="sTime" value="" />
+            <a id='sTime-handle' href="#">Click Me</a>
+          </div>
+        </form>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="jquery.okTreemap.js"></script>
+  <script type='text/javascript'>
+
+      function setTime(selections) {
+        var meridiem = selections[0] || '',
+            hour     = selections[1] || '',
+            minute   = (selections.length == 4 ?  selections[2].replace(/0$/, selections[3]) : (selections[2] || ''));
+        if (minute != '') {
+          minute = ":" + minute;
+        }
+        return hour + minute + meridiem;
+      }
+      // This is one of the simplest use cases, just passing in the step
+      // directly to return the values for that given step. More complex processing
+      // could be performed based on the value.
+      $("a#sTime-handle").treeMap(function(step,value){
+          return [
+            ['am','pm'],
+            ['1','2','3','4','5','6','7','8','9','10','11','12'],
+            ['00','10','20','30','40','50'],
+            ['0','1','2','3','4','5','6','7','8','9']
+          ][step];
+        }, {
+          title: "Select time",
+          gridFunction: function(count) {
+            return {
+              '2'  : [2,1],
+              '6'  : [2,3],
+              '9'  : [3,3],
+              '10' : [5,2],
+              '12' : [3,4]
+            }[count];
+          },
+          onSelect: function(selections, value) {
+            this.find('.ui-treemap-title').html(setTime(selections));
+          },
+          onComplete: function(selections) {
+            $("#sTime").val(setTime(selections));
+          }
+        });
+  </script>
+</body>
 </html>
-
-
