--- a/okValidate/example.html
+++ b/okValidate/example.html
@@ -1,133 +1,157 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang='en-US' xml:lang='en-US' xmlns='http://www.w3.org/1999/xhtml'>
-  <head>
-    <meta content='text/html; charset=utf-8' http-equiv='content-type' />
-    <title>jquery.okValidate.js</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="jquery.okValidate.js"></script>
-		<script type="text/javascript">
-      (function($){
-       
-        $(document).ready(function() {
-          $.extend($.fn.okValidate.validators, {
-            captcha: /^bar$/,
-            between: function(){
-              var l = $("input[type='checkbox'][name="+ this[0].name +"]:checked").length;
-              return l >= 2 && 1 <= 4;
-            },
-            /*
-             * For ajax validation return nothing initially.  In the callback
-             * trigger one of two events, 'ok' or 'error' on the input (which
-             * will be 'this' inside the validator ).  The 'error' should 
-             * be passed an message to append to the offending input. 
-             * Alternatively, you can trigger the 'message' event, which is 
-             * identical to the 'error' event except the class of the 
-             * label will be `messageClass` rather than `errorClass`.
-             */
-            ajax: function(){
-              var self = $(this);
-              $.get("example.html",function(){
-                if (self.val() == "ok") {
-                  self.trigger("message", ["Looks Ok"]);
-                } else if (self.val() != "") {
-                  self.trigger("error",["Ajax Error"]);
-                }
-              });
+<!doctype html>
+<!--[if lt IE 7]><html class="ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"><!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>okValidate</title>
+  <meta name="description" content="okValidate">
+  <meta name="author" content="okbreathe">
+  <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="okValidate.css" rel="stylesheet" type="text/css" media="screen">
+  <!--[if lt IE 9]>
+    <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->  
+</head>
+<body>
+
+  <div id="doc">
+    <header>
+      <h1>okValidate</h1>
+    </header>
+
+    <article id="main" class='container'>
+      <div class='twelve'>
+        <p class='box'>A lightweight, customizable form validation plugin for jQuery 1.4+ that just works</p>
+        <h2>Example</h2>
+        <form accept-charset='utf-8' action='' id='contact-form' method='post'>
+          <fieldset>
+            <legend>contact information</legend>
+            <div class='form-item'>
+              <label>
+                name
+                <em class='required'>(required):</em>
+              </label>
+              <input class='required length[10,20]' id='name' name='name' type='text' />
+            </div>
+            <div class='form-item'>
+              <label for='email'>
+                email
+                <em class='required'>(required):</em>
+              </label>
+              <input class='email required' name='email' type='text' />
+            </div>
+            <div class='form-item'>
+              <label>
+                phone
+              </label>
+              <input class='phone' id='phone' name='phone' type='text' />
+            </div>
+            <div class='form-item'>
+              <label for='ajax'>
+                ajax request (type 'ok' to pass validation)
+              </label>
+              <input class='ajax required' name='ajax' type='text' />
+            </div>
+            <div class='form-item'>
+              <label>
+                favorite colour
+                <em class='required'>(required):</em>
+              </label>
+              <select id="favorite_colour" class='required' name="color">
+                <option value="">select colour</option>
+                <option value="red">red</option>
+                <option value="blue">blue</option>
+                <option value="green">green</option>
+                <option value="yellow">yellow</option>
+              </select>
+            </div>
+            <div class='form-item'>
+              <label>
+                pizza toppings
+                <em class='required'>(required, pick between 2-4):</em>
+              </label>
+              <label><input type=checkbox name='pizza_topping[]' value="mushrooms" />mushrooms</label>
+              <label><input type=checkbox name='pizza_topping[]' value="green_peppers" />green<peppers/label> 
+              <label><input type=checkbox name='pizza_topping[]' value="olives" />olives</label>
+              <label><input type=checkbox name='pizza_topping[]' value="onions" />onions</label>
+              <label><input type=checkbox name='pizza_topping[]' value="meat" />meat</label>
+              <label><input type=checkbox name='pizza_topping[]' class='required between' value="pineapple" />pineapple</label>
+            </div>
+            <div class='form-item'>
+              <label>
+                dairy product of choice
+                <em class='required'>(required):</em>
+              </label>
+              <label><input type="radio" name="dairy" class='required' value="Milk" />Milk</label> 
+              <label><input type="radio" name="dairy" class='required' value="Butter" />Butter</label> 
+              <label><input type="radio" name="dairy" class='required' value="Cheese" />Cheese</label> 
+            </div>
+            <div class='form-item'>
+              <label for='captcha'>
+                I say foo, you say?
+                <em class='required'>(required):</em>
+              </label>
+              <input type='text' class='required captcha' id='captcha' name='captcha'></input>
+            </div>
+          </fieldset>
+          <div class='form-item submit'>
+            <input type='submit' value='send' />
+          </div>
+        </form>
+      </div>
+    </article>
+
+    <footer>
+      <h1><a href='http://okbreathe.com'>okbreathe</a></h1>
+    </footer>
+  </div> <!-- #doc -->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.okValidate.js"></script>
+  <script type="text/javascript">
+    (function($){
+     
+      $.extend($.fn.okValidate.validators, {
+        captcha: /^bar$/,
+        between: function(){
+          var l = $("input[type='checkbox'][name="+ this[0].name +"]:checked").length;
+          return l >= 2 && 1 <= 4;
+        },
+        /*
+         * For ajax validation return nothing initially.  In the callback
+         * trigger one of two events, 'ok' or 'error' on the input (which
+         * will be 'this' inside the validator ).  The 'error' should 
+         * be passed an message to append to the offending input. 
+         * Alternatively, you can trigger the 'message' event, which is 
+         * identical to the 'error' event except the class of the 
+         * label will be `messageClass` rather than `errorClass`.
+         */
+        ajax: function(){
+          var self = $(this);
+          $.get("example.html",function(){
+            if (self.val() == "ok") {
+              self.trigger("message", ["Looks Ok"]);
+            } else if (self.val() != "") {
+              self.trigger("error",["Ajax Error"]);
             }
           });
+        }
+      });
 
-          $.extend($.fn.okValidate.messages, {
-            captcha: "#{name} answer was not 'bar'",
-            between: "You must select between 2-4 toppings"
-          });
+      $.extend($.fn.okValidate.messages, {
+        captcha: "#{name} answer was not 'bar'",
+        between: "You must select between 2-4 toppings"
+      });
 
-          $('#contact-form').okValidate({messageClass:"success"});
-        });
+      $('#contact-form').okValidate({messageClass:"success"});
 
-       })(jQuery)
-		</script>
-    <link rel="stylesheet" href="screen.css" type="text/css" />
-  </head>
-  <body>
-    <div id='doc'>
-      <h1>okValidate</h1>
-      <p class='large'>A lightweight, customizable form validation plugin for jQuery 1.3/1.4 that just works</p>
-      <h2>Example</h2>
-      <form accept-charset='utf-8' action='' id='contact-form' method='post'>
-        <fieldset>
-          <legend>contact information</legend>
-          <div class='form-item'>
-            <label>
-              name
-              <em class='required'>(required):</em>
-            </label>
-            <input class='required length[10,20]' id='name' name='name' type='text' />
-          </div>
-          <div class='form-item'>
-            <label for='email'>
-              email
-              <em class='required'>(required):</em>
-            </label>
-            <input class='email required' name='email' type='text' />
-          </div>
-          <div class='form-item'>
-            <label>
-              phone
-            </label>
-            <input class='phone' id='phone' name='phone' type='text' />
-          </div>
-          <div class='form-item'>
-            <label for='ajax'>
-              ajax request (type 'ok' to pass validation)
-            </label>
-            <input class='ajax required' name='ajax' type='text' />
-          </div>
-          <div class='form-item'>
-            <label>
-              favorite colour
-              <em class='required'>(required):</em>
-            </label>
-            <select id="favorite_colour" class='required' name="color">
-              <option value="">select colour</option>
-              <option value="red">red</option>
-              <option value="blue">blue</option>
-              <option value="green">green</option>
-              <option value="yellow">yellow</option>
-            </select>
-          </div>
-          <div class='form-item'>
-            <label>
-              pizza toppings
-              <em class='required'>(required, pick between 2-4):</em>
-            </label>
-            <label><input type=checkbox name='pizza_topping[]' value="mushrooms" />mushrooms</label>
-            <label><input type=checkbox name='pizza_topping[]' value="green_peppers" />green<peppers/label> 
-            <label><input type=checkbox name='pizza_topping[]' value="olives" />olives</label>
-            <label><input type=checkbox name='pizza_topping[]' value="onions" />onions</label>
-            <label><input type=checkbox name='pizza_topping[]' value="meat" />meat</label>
-            <label><input type=checkbox name='pizza_topping[]' class='required between' value="pineapple" />pineapple</label>
-          </div>
-          <div class='form-item'>
-            <label>
-              dairy product of choice
-              <em class='required'>(required):</em>
-            </label>
-            <label><input type="radio" name="dairy" class='required' value="Milk" />Milk</label> 
-            <label><input type="radio" name="dairy" class='required' value="Butter" />Butter</label> 
-            <label><input type="radio" name="dairy" class='required' value="Cheese" />Cheese</label> 
-          </div>
-          <div class='form-item'>
-            <label for='captcha'>
-              I say foo, you say?
-              <em class='required'>(required):</em>
-            </label>
-            <input type='text' class='required captcha' id='captcha' name='captcha'></input>
-          </div>
-        </fieldset>
-        <div class='form-item submit'>
-          <input type='submit' value='send' />
-        </div>
-      </form>
-    </div>
-  </body>
+     })(jQuery)
+  </script>
+
+</body>
 </html>
+
